--- a/css/estilo.css
+++ b/css/estilo.css
@@ -10,7 +10,7 @@
  */
  body {
     font-family: arial;
-    background-image: url('../img/fondo.png');
+    background-image: url('../img/fondo.jpg');
     max-width: 1000px;
     margin: 0 auto;
     /* Centrado */
@@ -27,7 +27,7 @@ nav, footer {
     margin-bottom: 10px;
     padding: 4px;
     text-align: center;
-    background-color: #914bb9;
+    background-color: #bd6830;
     font-size: 80%;
 }
 
@@ -63,7 +63,9 @@ h2 {
 #eslogan {
     float: left;
     margin: 5% 5%;
-    color: #914bb9;
+    font-size: 50px;
+    font-family: Impact, Charcoal, sans-serif;
+    color: #080a09;
 }
 
 #registro {
