--- a/css/estilo.css
+++ b/css/estilo.css
@@ -13,7 +13,25 @@
     color: #5eff00;
     font-size: 20px;
  }
-
+ #nm{
+    font-family: "Impact, Charcoal, sans-serif";
+    color: #000000;
+    font-size: 50px;
+    display: inline;
+    padding: 50px 50px;
+    width: 100px;
+    height: 100px;
+ }
+ #lnm{
+    font-family: "Impact, Charcoal, sans-serif";
+    color: #000000;
+    font-size: 50px;
+    display: inline;
+    padding-bottom: 50px;
+    float: right;
+    width: 100px;
+    height: 100px;
+ }
 
  body {
     background-image: url('../img/fondo.jpg');
