--- a/css/estilo.css
+++ b/css/estilo.css
@@ -153,6 +153,28 @@ h1 {
     border-radius: 6px;
   }
 
+  #delete{
+    background-color:  #cf0e0e;
+    color: white;
+    padding: 14px 25px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    margin: 0px auto; 
+    border-radius: 6px;
+  }
+
+  #pagar{
+    background-color:  #55cf0e;
+    color: white;
+    padding: 14px 25px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    margin: 0px auto; 
+    border-radius: 6px;
+  }
+
 
   legend{
     margin-top: 10;
@@ -171,6 +193,12 @@ h3 {
     max-width: 2%;
     min-width: 5%;
 }
+
+#logotipo{
+    max-width: 2%;
+    min-width: 5%;
+    padding-right: 1%;
+}
 #lista {
     max-width: 20%;
     min-width: 40%;
@@ -180,6 +208,34 @@ h3 {
     float: left;
     margin: 5% 5%;
     font-size: 50px;
+    font-family: Impact, Charcoal, sans-serif;
+    color: #000000;
+}
+
+.cabecera {
+    text-align: center;
+}
+
+.container-titles {
+    display: inline-block;
+}
+
+.container-titles > h2 {
+    margin-block-end: 0.83em;
+    font-size: 43px;
+    font-family: Impact, Charcoal, sans-serif;
+}
+
+.container-titles > p {
+    font-size: 19px;
+    margin-block-start: -1.25em;
+    font-family: Impact, Charcoal, sans-serif;
+}
+
+#subtitle {
+    float: left;
+    margin: 5% 5%;
+    font-size: 20px;
     font-family: Impact, Charcoal, sans-serif;
     color: #000000;
 }
