--- a/css/estilo.css
+++ b/css/estilo.css
@@ -43,8 +43,9 @@
  }
 
  .visible{
-     display:inline-block;
-     right:20%;
+    top: 50%;
+    left: 60%;
+
  }
 
  .widget {
@@ -57,8 +58,10 @@
 }
 
 #carrito_js {
-    width: 50%;
-    height: 50%;
+    width: 30%;
+    height: 30%;
+    top: 50%;
+    left: 60%;
 }
 
 #carrito_js th, #carrito_js td {
