--- a/css/estilo.css
+++ b/css/estilo.css
@@ -8,6 +8,15 @@
  * Template Version: 1.0.0
  * GitHub Theme URI: https://github.com/dllido/EI1036_42_public/tree/master/P1
  */
+ 
+ .disableselect {
+    -webkit-touch-callout: none; 
+    -webkit-user-select: none;  
+    -khtml-user-select: none;   
+    -moz-user-select: none;    
+    -ms-user-select: none;      
+     user-select: none;         
+  }
 
  #nm{
     font-family: "Impact, Charcoal, sans-serif";
