--- a/css/bootstrap-alerts.css
+++ b/css/bootstrap-alerts.css
@@ -96,3 +96,7 @@
   .alert-danger .alert-link {
     color: #843534;
   }
+
+  .fade{opacity:0;-webkit-transition:opacity .15s linear;-o-transition:opacity .15s linear;transition:opacity .15s linear}
+
+  .show{display:block!important}
