--- a/css/estilo.css
+++ b/css/estilo.css
@@ -96,6 +96,8 @@
 
 #carrito_div {
     font-family: Impact, Charcoal, sans-serif;
+    font-Size:25px;
+    padding-Top:10px;
 }
 
 #carrito_js th, #carrito_js td {
@@ -105,12 +107,18 @@
     text-align: center; 
     border-bottom: 1px solid #ddd;
 }
-#carrito_js img {
+
+#carrito_js h1 {
+    text-decoration: underline;
+}
+#imagen_instrumento {
     width: 100px;
     height: 100px;
 }
-#carrito_js h1 {
-    text-decoration: underline;
+#imagen_vacio{
+    height:250px;
+    width:250px;
+    padding-right: 20px;
 }
 
 
