--- a/css/estilo.css
+++ b/css/estilo.css
@@ -120,8 +120,15 @@
     width:250px;
     padding-right: 20px;
 }
-
-
+#input_list{
+    margin-top: 20px;
+    margin-bottom: 20px;
+    width: 300px;
+    height: 20px;
+    border: 2px solid #ccc;
+    color: #333;
+    padding: 5px;
+}
 .cerrar{
     float: right;
     border-bottom: 1px solid #bbb;
@@ -467,6 +474,7 @@ td, th { width: 500px; height: 100px; margin: 10px 10px auto; text-align: center
     width: 200px;
     overflow-x: scroll;
     display:flex;
+    margin-left: 125px;
 }
 
 .item {
