--- a/css/estilo.css
+++ b/css/estilo.css
@@ -177,7 +177,7 @@ footer {
     font-size: 100%;
 }
 #margen{
-    height: 40px;
+    height: 50px;
     background-color: #bd6830;
     font-size: 25px;    
 }
@@ -474,6 +474,7 @@ td, th { width: 500px; height: 100px; margin: 10px 10px auto; text-align: center
     width: 200px;
     overflow-x: scroll;
     display:flex;
+    margin-top: 30px;
     margin-left: 125px;
 }
 
